Change page title

--- a/docs/0.1.0.md
+++ b/docs/0.1.0.md
@@ -1,4 +1,4 @@
-# Kafka as a Service
+# Strimzi 0.1.0 - Documentation
 
 Strimzi provides a way to run an [Apache Kafka][kafka] cluster on 
 [Kubernetes][k8s] or [OpenShift][os] in various deployment configurations.
