Change title order

--- a/docs/0.1.0.md
+++ b/docs/0.1.0.md
@@ -1,4 +1,4 @@
-# Strimzi 0.1.0 - Documentation
+# Documentation - Strimzi 0.1.0
 
 Strimzi provides a way to run an [Apache Kafka][kafka] cluster on 
 [Kubernetes][k8s] or [OpenShift][os] in various deployment configurations.
