--- a/_posts/2018-10-01-strimzi-0.7.0-release.md
+++ b/_posts/2018-10-01-strimzi-0.7.0-release.md
@@ -17,7 +17,7 @@ Your application doesn't need to be containarized and running in the same Kubern
 
 There are three different ways for doing that using:
 
-* OpenShift routes (so OpenShift only)
+* OpenShift Routes (so OpenShift only)
 * LoadBalancers
 * NodePorts
 
