--- a/_posts/2018-10-01-strimzi-0.7.0-release.md
+++ b/_posts/2018-10-01-strimzi-0.7.0-release.md
@@ -13,18 +13,18 @@ We are delighted to announce the new Strimzi 0.7.0 release with many awesome new
 
 The Strimzi community has been asking for it for long time and finally it's here!
 The Kafka cluster is now accessible from the outside of the Kubernets/OpenShift cluster where it's deployed.
-Your application doesn't need to be containarized and running in the same Kubernetes/OpenShift cluster for connecting to the Kafka cluster; your application can be any client running outside of it.
+Your application doesn't need to be containarized and running in the same Kubernetes/OpenShift cluster for connecting to the Kafka cluster; your client application can be any client running outside of it.
 
 There are three different ways for doing that using:
 
-* OpenShift Routes (so OpenShift only)
-* LoadBalancers
-* NodePorts
+* Using OpenShift `Routes` (so OpenShift only)
+* Using `LoadBalancers`
+* Using `NodePorts`
 
-In order to do that, the new `external` listener was added to the `Kafka` resource.
+In order to do that, the new `Kafka.spec.kafka.listeners.external` listener configures whether and how the Kafka cluster is exposed.
 It can be of three different types : `route`, `loadbalancer` and `nodeport`.
 
-Here's an example snippet about exposing the Kafka cluster using OpenShift routes:
+Here's an example snippet that exposes the Kafka cluster using OpenShift routes:
 
 ```yaml
 apiVersion: kafka.strimzi.io/v1alpha1
@@ -45,7 +45,7 @@ An additional `Route` is created to serve as a Kafka bootstrap address.
 Kafka clients can use these `Routes` to connect to Kafka on port 443.
 
 When the Kafka cluster is exposed by using LoadBalancers, a new `Service` of type `LoadBalancer` is created for every Kafka broker pod.
-An additional loadbalancer is created to serve as a Kafka bootstrap address.
+An additional `LoadBalancer` is created to serve as a Kafka bootstrap address.
 Loadbalancers listen to connections on port 9094.
 
 When the Kafka cluster is exposed by using NodePorts, `Services` of type `NodePort` are created.
@@ -54,9 +54,9 @@ You must enable access to the ports on these nodes for each client (for example,
 Each Kafka broker pod is then accessible on a separate port.
 Additional `NodePort` type `Service` is created to serve as a Kafka bootstrap address.
 
-It's important to highlight that the connection from outside is possible only through TLS.
+It's important to highlight that the connection from outside is currently only possible through TLS.
 
-Of course, as the other listeners, you can configure the type of `authentication` you want for the `external` listener from the currently supported: TLS and SASL SCRAM-SHA 512 (new with 0.7.0 release).
+Of course, as with the other listeners, you can configure the type of `authentication` you want for the `external` listener from the currently supported: TLS and SASL SCRAM-SHA 512 (new with 0.7.0 release).
 
 # Support for SASL SCRAM-SHA-512 authentication
 
