--- a/_posts/2018-10-12-strimzi-0.8.0-release.md
+++ b/_posts/2018-10-12-strimzi-0.8.0-release.md
@@ -9,15 +9,15 @@ We are delighted to announce the new Strimzi 0.8.0 release with many awesome new
 
 <!--more-->
 
-# Accessing Kafka cluster from outside without TLS
+# Access your Kafka cluster from outside—without TLS
 
-The previous release added the possibility to access the Kafka cluster from the outside.
-The Kafka clients were able to exchange messages when not running on the same Kubernetes/OpenShift cluster where Kafka was deployed but from the outside.
-The prerequisite was the TLS protocol enabled on client side because all the provided `listeners` were accessible only thorugh encryption.
-With this new release, all the `listeners` have TLS enabled by default but it is possible to disable it by setting the `tls` property to `false`.
+The previous release added the ability to access your Kafka cluster from the outside.
+So, Kafka clients could exchange messages even if they were not running on the same Kubernetes or OpenShift cluster as the Kafka deployment.
+Previously, the TLS protocol needed to be enabled on the client side because all the provided `listeners` could only be accessed through encryption.
+With this new release, all the `listeners` have TLS enabled by default but you can choose to disable it by setting the `tls` property to `false`.
 Of course, disabling TLS is possible only for `loadbalancer` and `nodeport` listeners but not on OpenShift `route` for which the TLS is mandatory.
 
-Here's an example snippet that exposes the Kafka cluster using `loadbalancer` and TLS disabled:
+Here's an example snippet that exposes the Kafka cluster using `loadbalancer` with TLS disabled:
 
 ```yaml
 apiVersion: kafka.strimzi.io/v1alpha1
@@ -34,10 +34,10 @@ spec:
     ...
 ```
 
-# Handling certificates renewal and expirations
+# Handle certificate renewal and expiry
 
 The cluster CA and clients CA certificates are only valid for a limited time period, known as the validity period which is defined as the number of days since the certificate was generated.
-For auto-generated certificates, it is possible to configure the validity period by setting the `validityDays` property.
+For auto-generated certificates, you can now configure the validity period by setting the `validityDays` property.
 Manually-installed CA certificates should have their own validity period defined.
 
 When a CA certificate expires, the certificates that it has signed will fail validation, even if they were previously valid.
@@ -75,7 +75,7 @@ The renewal period is measured backwards, from the expiry date of the current ce
 
 # A new operator in town: Mirror Maker!
 
-The Strimzi operators family has now a new baby: the Kafka Mirror Maker operator.
+The Strimzi operators family has a new baby: the Kafka Mirror Maker Operator.
 
 Apache Kafka Mirror Maker is a component of the Apache Kafka project which provides data "mirroring" between Kafka clusters.
 The Mirror Maker consumes messages from a source cluster and republishes those messages to a target cluster.
@@ -100,15 +100,15 @@ spec:
   whitelist: ".*"
 ```
 
-The `KafkaMirrorMaker` resource allows to define the `consumer` and `producer` configuration for connecting to the source and target cluster.
-The `whitelist` property specifies the list topics that the Kafka Mirror Maker has to mirror from the source to the target.
+The `KafkaMirrorMaker` resource allows you to define the `consumer` and `producer` configuration for connecting to the source and target cluster.
+The `whitelist` property specifies the list of topics that the Kafka Mirror Maker has to mirror from the source to the target.
 It allows any regular expression from the simplest case with a single topic name to complex patterns.
 For example, you can mirror topics A and B using "A|B" or all topics using "*".
 
 Of course, Kafka Mirror Maker can connect to clusters which have TLS protocol enabled and use authentication (TLS client authentication or SCRAM-SHA-512).
 It is possible to specify trusted TLS certificates and authentication client certificate or credentials in the `KafkaMirrorMaker` resource as well (as it already happens for `KafkaConnect` resource).
 
-Here's an example snippet that defines a `KafkaMirrorMaker` resource for connectint to TLS enabled cluster and TLS client authentication:
+Here's an example snippet that defines a `KafkaMirrorMaker` resource for connecting to TLS enabled cluster and TLS client authentication:
 
 ```yaml
 apiVersion: kafka.strimzi.io/v1alpha1
@@ -145,9 +145,9 @@ spec:
   whitelist: ".*"
 ```
 
-More other Kafka Mirror Maker configuration properties can be found at the official [documentation](http://strimzi.io/docs/0.8.0/#assembly-deployment-configuration-kafka-mirror-maker-str).
+Other Kafka Mirror Maker configuration properties can be found at the official [documentation](http://strimzi.io/docs/0.8.0/#assembly-deployment-configuration-kafka-mirror-maker-str).
 
-# ... and many mores
+# ... and many more
 
 Other features were included in this new release, the most important ones:
 
@@ -159,6 +159,6 @@ Of course, bug fixes are there as well!
 # Conclusion
 
 This release represents another really huge milestone for this open source project.
-You can refer to the release [changes log](https://github.com/strimzi/strimzi/releases/tag/0.8.0) for getting more information.
+You can refer to the release [changes log](https://github.com/strimzi/strimzi/releases/tag/0.8.0) to get more information.
 
 What are you waiting for? Engage with the community and help us to improve the Strimzi project for running your Kafka cluster on Kubernetes/OpenShift!
