--- a/_posts/2018-10-12-strimzi-0.8.0-release.md
+++ b/_posts/2018-10-12-strimzi-0.8.0-release.md
@@ -15,7 +15,8 @@ The previous release added the ability to access your Kafka cluster from the out
 So, Kafka clients could exchange messages even if they were not running on the same Kubernetes or OpenShift cluster as the Kafka deployment.
 Previously, the TLS protocol needed to be enabled on the client side because all the provided `listeners` could only be accessed through encryption.
 With this new release, all the `listeners` have TLS enabled by default but you can choose to disable it by setting the `tls` property to `false`.
-Of course, disabling TLS is possible only for `loadbalancer` and `nodeport` listeners but not on OpenShift `route` for which the TLS is mandatory.
+Of course, disabling TLS is possible only for `loadbalancer` and `nodeport` listeners.
+With OpenShift `route`, the traffic is sneaked through with TLS passthrough and that is why it has to always use TLS.
 
 Here's an example snippet that exposes the Kafka cluster using `loadbalancer` with TLS disabled:
 
