--- a/_posts/2018-12-23-strimzi-0.9.0-release.md
+++ b/_posts/2018-12-23-strimzi-0.9.0-release.md
@@ -13,7 +13,7 @@ We are delighted to announce the new Strimzi 0.9.0 release with many awesome new
 
 This feature really shows the engagement that the Strimzi team has with the community!
 A lot of Strimzi users started to have the need to add labels and annotations to the different resources created by the Cluster Operator like StatefulsSets, Pods and so on.
-It was driven by a better coexistence with other "frameworks" like Istion or Cilium and better configuration of things like Prometheus.
+ It was driven by a better coexistence with other "frameworks" like Istio or Cilium and better configuration of things like Prometheus.
 With this new release, it's now possible to use the new `template` property under the `kafka` and `zookeeper` properties in the `Kafka` resource in order to do that.
 
 Here's an example snippet that add a few labels and annotations to Kafka related Pods and Services.
