--- a/_posts/2018-12-23-strimzi-0.9.0-release.md
+++ b/_posts/2018-12-23-strimzi-0.9.0-release.md
@@ -5,7 +5,7 @@ date: 2018-12-23
 author: paolo_patierno
 ---
 
-We are delighted to announce the new Strimzi 0.9.0 release with many awesome new features!
+We are delighted to announce the new Strimzi 0.9.0 release with some new features!
 
 <!--more-->
 
@@ -13,8 +13,9 @@ We are delighted to announce the new Strimzi 0.9.0 release with many awesome new
 
 This feature really shows the engagement that the Strimzi team has with the community!
 A lot of Strimzi users started to have the need to add labels and annotations to the different resources created by the Cluster Operator like StatefulsSets, Pods and so on.
- It was driven by a better coexistence with other "frameworks" like Istio or Cilium and better configuration of things like Prometheus.
+It was driven by a better coexistence with other "frameworks" like Istio or Cilium and better configuration of things like Prometheus.
 With this new release, it's now possible to use the new `template` property under the `kafka` and `zookeeper` properties in the `Kafka` resource in order to do that.
+It's available for Kafka Connect and Kafka Mirror Maker deployments as well.
 
 Here's an example snippet that add a few labels and annotations to Kafka related Pods and Services.
 
