--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "Strimzi 0.11.0 released!"
+title:  "Strimzi 0.11.0 and 0.11.1 released!"
 date: 2018-03-07
 author: paolo_patierno
 ---
 
-We are delighted to announce the new Strimzi 0.11.1 release with some new features!
+We are delighted to announce the new Strimzi 0.11.0 and 0.11.1 releases with some new features!
 
 <!--more-->
 
@@ -48,7 +48,7 @@ The Cluster Operator will configure the `log.dirs` Kafka parameter accordingly, 
 
 # Improved configuration for off cluster access
 
-This improvement was really driven by the community!
+This improvement was mostly driven and contributed by the community!
 A lot of developers asked about having more flexibility and extensibility on the listeners configuration for exposing the Kafka cluster outside of the Kubernetes/OpenShift cluster.
 
 When configuring the `listeners.external` section of the `Kafka` resource, it's now possible to leverage a new `overrides` property for a more powerful configuration.
@@ -179,7 +179,7 @@ Other features were included in this new release, the most important ones:
 
 * Support for the Cluster Operator to watch all namespaces for the supported resources.
 * Allow users to configure the default ImagePullPolicy related to the containers images download.
-* Operator Lifecycle Manager integration which allowed to have Strimzi as part of the [OperatorHub.io](https://www.operatorhub.io/).
+* Operator Lifecycle Manager integration which allowed to have Strimzi as part of the [OperatorHub.io](https://www.operatorhub.io/). You can get more information on this [post](https://strimzi.io/2019/03/06/strimzi-and-operator-lifecycle-manager.html)
 
 Of course, bug fixes are there as well!
 
