--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -185,7 +185,7 @@ Of course, bug fixes are there as well!
 
 # Conclusion
 
-This release represents another really huge milestone for this open source project.
-You can refer to the release [changes log](https://github.com/strimzi/strimzi/releases/tag/0.11.1) to get more information.
+This release represents another milestone for this open source project.
+You can refer to the release [change log](https://github.com/strimzi/strimzi/releases/tag/0.11.1) to get more information.
 
 What are you waiting for? Engage with the community and help us to improve the Strimzi project for running your Kafka cluster on Kubernetes/OpenShift!
