--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -11,7 +11,7 @@ We are delighted to announce the new Strimzi 0.11.0 and 0.11.1 releases with som
 
 # JBOD storage support for Kafka brokers
 
-Other than supporting the ephemeral and persistent storage, now Strimzi supports JBOD (Just a Bunch of Disks) storage for Kafka brokers (but not for Zookeeper nodes).
+Other than supporting the ephemeral and persistent storage, Strimzi now supports JBOD (Just a Bunch of Disks) storage for Kafka brokers (but not for Zookeeper nodes).
 
 The JBOD data storage configuration provides a way for having multiple disks combined to create a single logical disk, or volume.
 JBOD is one approach to providing increased data storage for Kafka brokers.
