--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -13,7 +13,7 @@ We are delighted to announce the new Strimzi 0.11.0 and 0.11.1 releases with som
 
 Other than supporting the ephemeral and persistent storage, Strimzi now supports JBOD (Just a Bunch of Disks) storage for Kafka brokers (but not for Zookeeper nodes).
 
-The JBOD data storage configuration provides a way for having multiple disks combined to create a single logical disk, or volume.
+The JBOD data storage configuration provides a way for Kafka brokers to make use of multiple disks.
 JBOD is one approach to providing increased data storage for Kafka brokers.
 It can also improve performance.
 A JBOD configuration is described by one or more volumes, each of which can be either ephemeral or persistent.
