--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -15,7 +15,7 @@ Other than supporting the ephemeral and persistent storage, Strimzi now supports
 
 The JBOD data storage configuration provides a way for Kafka brokers to make use of multiple disks.
 JBOD is one approach to providing increased data storage for Kafka brokers.
-It can also improve performance.
+It can also improve performance when there is an independent I/O path for each disk. 
 A JBOD configuration is described by one or more volumes, each of which can be either ephemeral or persistent.
 
 To use JBOD with Strimzi, the storage `type` must be set to the new `jbod` value.
