--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -83,7 +83,7 @@ spec:
               host: broker-2.myrouter.com
 ```
 
-Another powerful new addition is about configuring the node ports when the `nodeport` listener is used.
+The `nodeport` listener is now also more configurable.
 By default, the port numbers used for the bootstrap and broker services are automatically assigned by OpenShift or Kubernetes.
 Now, you can override the assigned node ports by specifying the requested port numbers.
 
