--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -46,7 +46,7 @@ spec:
 
 The Cluster Operator will configure the `log.dirs` Kafka parameter accordingly, in order to store messages logs on the different volumes.
 
-# Improved configuration for off cluster access
+# Improved configuration for off-cluster access
 
 This improvement was mostly driven and contributed by the community!
 A lot of developers asked about having more flexibility and extensibility on the listeners configuration for exposing the Kafka cluster outside of the Kubernetes/OpenShift cluster.
