--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -53,7 +53,7 @@ A lot of developers asked about having more flexibility and extensibility on the
 
 When configuring the `listeners.external` section of the `Kafka` resource, it's now possible to leverage a new `overrides` property for a more powerful configuration.
 
-For example, by default, using a `route` listener, the route hosts are automatically assigned by OpenShift.
+For example, by default, using a `route` listener, the route hostnames are automatically assigned by OpenShift.
 Now, you can override the assigned route hosts by specifying the requested hosts.
 
 Here's an example snippet for overriding route hosts.
