--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -54,7 +54,7 @@ A lot of developers asked about having more flexibility and extensibility on the
 When configuring the `listeners.external` section of the `Kafka` resource, it's now possible to leverage a new `overrides` property for a more powerful configuration.
 
 For example, by default, using a `route` listener, the route hostnames are automatically assigned by OpenShift.
-Now, you can override the assigned route hosts by specifying the requested hosts.
+Now, you can override the assigned route hostnamess, specifying the names you want to use.
 
 Here's an example snippet for overriding route hosts.
 
