--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -115,7 +115,7 @@ spec:
             nodePort: 32002
 ```
 
-Finally, a really interesting new feature on listeners is about customizing the Kafka brokers advertised addresses.
+Finally, a really interesting new feature on listeners is customization of the Kafka brokers' advertised addresses.
 By default, Strimzi tries to automatically determine the hostnames and ports that your Kafka cluster advertises to its clients.
 This is not sufficient in all situations, because the infrastructure on which Strimzi is running might not provide the right hostname or port through which Kafka can be accessed.
 Now, you can customize the advertised hostname and port.
