--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -158,7 +158,7 @@ It is possible to declare alerting rules on the Prometheus server in order to be
 When an alert condition is evaluated as true, Prometheus sends alert data to the alert manager which then sends notifications out.
 Notifications can be sent via methods such as email, Slack, PagerDuty and HipChat.
 
-The new Strimzi release provides the Kubernetes/OpenShift resources for deploying the alert manager as well as few examples of alerting rules for Kafka and Zookeeper metrics and related notifications via Slack.
+The new Strimzi release provides the Kubernetes/OpenShift resources for deploying the alert manager as well as a few examples of alerting rules for Kafka and Zookeeper metrics and related notifications via Slack.
 
 Here's an example snippet with an alert related to the under replicated partitions metric.
 
