--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -50,6 +50,7 @@ The Cluster Operator will configure the `log.dirs` Kafka parameter accordingly, 
 
 This improvement was mostly driven and contributed by the community!
 A lot of developers asked about having more flexibility and extensibility on the listeners configuration for exposing the Kafka cluster outside of the Kubernetes/OpenShift cluster.
+Thanks to [djotanov](https://github.com/djotanov) for opening a [pull request](https://github.com/strimzi/strimzi-kafka-operator/pull/1235) about part of these new features.
 
 When configuring the `listeners.external` section of the `Kafka` resource, it's now possible to leverage a new `overrides` property for a more powerful configuration.
 
@@ -85,7 +86,7 @@ spec:
 
 The `nodeport` listener is now also more configurable.
 By default, the port numbers used for the bootstrap and broker services are automatically assigned by OpenShift or Kubernetes.
-Now, you can override the assigned node ports by specifying the requested port numbers.
+This new Strimzi release lets you can override the assigned node ports by specifying the requested port numbers.
 
 Here's an example snippet for overriding node ports.
 
@@ -153,7 +154,7 @@ You can find many more overrides option in the official documentation in the Kaf
 
 # Prometheus alerts
 
-Other than providing the server component for scraping metrics from your applications, the Prometheus project also provides an alerting system through the alert manager component.
+Other than providing the server component for scraping metrics from your applications, the [Prometheus](https://prometheus.io/) project also provides an alerting system through the [alert manager](https://prometheus.io/docs/alerting/alertmanager/) component.
 It is possible to declare alerting rules on the Prometheus server in order to be notified about specific conditions in the metrics.
 When an alert condition is evaluated as true, Prometheus sends alert data to the alert manager which then sends notifications out.
 Notifications can be sent via methods such as email, Slack, PagerDuty and HipChat.
