--- a/_posts/2019-03-07-strimzi-0.11.0-release.md
+++ b/_posts/2019-03-07-strimzi-0.11.0-release.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "Strimzi 0.11.0 and 0.11.1 released!"
+title:  "Strimzi 0.11.1 released!"
 date: 2018-03-07
 author: paolo_patierno
 ---
 
-We are delighted to announce the new Strimzi 0.11.0 and 0.11.1 releases with some new features!
+We are delighted to announce the new Strimzi 0.11.1 release with some new features!
 
 <!--more-->
 
