Use HTTPS in all Strimzi links

--- a/_posts/2018-10-12-strimzi-0.8.0-release.md
+++ b/_posts/2018-10-12-strimzi-0.8.0-release.md
@@ -146,7 +146,7 @@ spec:
   whitelist: ".*"
 ```
 
-Other Kafka Mirror Maker configuration properties can be found at the official [documentation](http://strimzi.io/docs/0.8.0/#assembly-deployment-configuration-kafka-mirror-maker-str).
+Other Kafka Mirror Maker configuration properties can be found at the official [documentation](https://strimzi.io/docs/0.8.0/#assembly-deployment-configuration-kafka-mirror-maker-str).
 
 # ... and many more
 
