Fixed typo and added websites for companies
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -16,8 +16,8 @@ This includes the Kafka brokers, Apache ZooKeeper, MirrorMaker and Kafka Connect
 Having Kubernetes-native APIs makes it easy to manage Kafka topics and users, and there are [multiple ways](https://strimzi.io/2019/04/17/accessing-kafka-part-1.html) to enable secure access to Kafka from outside the Kubernetes cluster.
 Recent additions to the project have included an [HTTP bridge](https://github.com/strimzi/strimzi-kafka-bridge) to enable additional protocol support; improved support for [scaling the persistent storage](https://strimzi.io/2019/07/08/persistent-storage-improvements.html) used by the Kafka brokers and monitoring using Prometheus.
 
-Since its inception in 2017 Strmizi has become a production ready mechanism for running Apache Kafka on Kubernetes.
-Initially begun by three developers, the project now has significantly more than that contributing to making it a success from organisations such as Red Hat, Lightbend and others.
+Since its inception in 2017 Strimzi has become a production ready mechanism for running Apache Kafka on Kubernetes.
+Initially begun by three developers, the project now has significantly more than that contributing to making it a success from organisations such as [Red Hat](https://www.redhat.com), [Lightbend](https://www.lightbend.com/) and others.
 It is used in production in industries including telecoms, finance and transportation.
 Strimzi is used in Knative Eventing as the default Kafka provider and forms the base of other data streaming platforms offering event driven integrations.
 We hope that membership of the CNCF will allow many more users to adopt Apache Kafka on Kubernetes for their applications.
