Fixed ML address and Slack address
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -26,9 +26,9 @@ The Strimzi community is friendly and driven by the desire to further Open Sourc
 Please do get involved, not just through code; documentation improvements, bug reports and blog posts are all appreciated.
 
 As Strimzi moves to the CNCF we are taking the opportunity to make a few changes to the communication methods we use. 
-Firstly, we will be moving to a [CNCF hosted Slack channel](https://cloud-native.slack.com/messages/CMH3Q3SNP) which, as an enterprise version, has unlimited users and message history. 
+Firstly, we will be moving to the #Strimzi Channel on the [CNCF hosted Slack](https://slack.cncf.io/) which, as an enterprise version, has unlimited users and message history. 
 We understand that moving the Slack channel is painful for all the users of the current channel, but feel that in this case, the benefits outweigh the pain. 
-Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [strimzi-dev@lists.cncf.io](mailto://strimzi-dev@lists.cncf.io). 
+Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [cncf-strimzi-dev@lists.cncf.io](mailto://cncf-strimzi-dev@lists.cncf.io). 
 
 We are excited to be part of the CNCF and are looking forward to the next chapter.
 We hope you will join us on that journey!
