Added text about moving Slack and ML
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -28,7 +28,15 @@ Please do get involved, not just through code; documentation improvements, bug r
 As Strimzi moves to the CNCF we are taking the opportunity to make a few changes to the communication methods we use. 
 Firstly, we will be moving to the #Strimzi Channel on the [CNCF hosted Slack](https://slack.cncf.io/) which, as an enterprise version, has unlimited users and message history. 
 We understand that moving the Slack channel is painful for all the users of the current channel, but feel that in this case, the benefits outweigh the pain. 
-Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [cncf-strimzi-dev@lists.cncf.io](mailto://cncf-strimzi-dev@lists.cncf.io). 
+Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [cncf-strimzi-user@lists.cncf.io](mailto://cncf-strimzi-user@lists.cncf.io).
 
-We are excited to be part of the CNCF and are looking forward to the next chapter.
+However, on a technical level, most users will not notice any change from the move to the CNCF.
+The release cadence of the project will be unchanged, no breaking code or license changes are planned and the development team has remained the same.
+Strimzi has adopted a [simple governance model](https://github.com/strimzi/strimzi-kafka-operator/blob/master/GOVERNANCE.md) at the suggestion of the Technical Oversight Committee (TOC).
+Over time we hope that more developers will contribute to Strimzi and become maintainers.
+
+We would like to thank the TOC for their work in overseeing the CNCF and taking time to understand the value delivered by Strimzi.
+Alexis Richardson and Matt Klein deserve additional thanks for sponsoring the project into the Sandbox - we are truly grateful.
+
+The next chapter in the life of Strimzi is going to be an exciting one as part of the CNCF.
 We hope you will join us on that journey!
