Added CNCF logo
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -11,6 +11,8 @@ From the core Kubernetes project to exciting early stage projects such as CloudE
 
 <!--more-->
 
+![CNCF Logo]({{ "/assets/2019-08-29-cncf-color.png" }})
+
 Strimzi provides Operators to deploy and manage the components of [Apache Kafka](https://kafka.apache.org/) on Kubernetes.
 This includes the Kafka brokers, Apache ZooKeeper, MirrorMaker and Kafka Connect.
 Having Kubernetes-native APIs makes it easy to manage Kafka topics and users, and there are [multiple ways](https://strimzi.io/2019/04/17/accessing-kafka-part-1.html) to enable secure access to Kafka from outside the Kubernetes cluster.
