fixed author reference
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Strimzi Apache Kafka Operator joins the CNCF"
 date: 2019-08-29
-author: Strimzi Developers
+author: strimzi_developers
 ---
 
 We are excited to announce that Strimzi is joining the Cloud Native Computing Foundation (CNCF) as a [Sandbox Project](https://www.cncf.io/sandbox-projects/).
