--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -5,7 +5,7 @@ date: 2019-08-29
 author: strimzi_developers
 ---
 
-We are excited to announce that Strimzi is joining the Cloud Native Computing Foundation (CNCF) as a [Sandbox Project](https://www.cncf.io/sandbox-projects/).
+We are excited to announce that Strimzi has joined the Cloud Native Computing Foundation (CNCF) as a [Sandbox Project](https://www.cncf.io/sandbox-projects/).
 The CNCF oversees many projects that provide critical infrastructure in cloud based environments and we are thrilled to be part of that community.
 From the core Kubernetes project to exciting early stage projects such as CloudEvents we feel Strimzi is in esteemed company.
 
