--- a/_posts/2019-08-29-cncf.md
+++ b/_posts/2019-08-29-cncf.md
@@ -33,7 +33,7 @@ We understand that moving the Slack channel is painful for all the users of the 
 Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [cncf-strimzi-user@lists.cncf.io](mailto://cncf-strimzi-user@lists.cncf.io).
 
 However, on a technical level, most users will not notice any change from the move to the CNCF.
-The release cadence of the project will be unchanged, no breaking code or license changes are planned and the development team has remained the same.
+The release cadence of the project will be unchanged, no breaking code or license changes are planned and the development team remains the same.
 Strimzi has adopted a [simple governance model](https://github.com/strimzi/strimzi-kafka-operator/blob/master/GOVERNANCE.md) at the suggestion of the Technical Oversight Committee (TOC).
 Over time we hope that more developers will contribute to Strimzi and become maintainers.
 
