Fixed CNCF users mailing list address
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_posts/2019-09-06-cncf.md
+++ b/_posts/2019-09-06-cncf.md
@@ -30,7 +30,7 @@ Please do get involved, not just through code; documentation improvements, bug r
 As Strimzi moves to the CNCF we are taking the opportunity to make a few changes to the communication methods we use. 
 Firstly, we will be moving to the #Strimzi Channel on the [CNCF hosted Slack](https://slack.cncf.io/) which, as an enterprise version, has unlimited users and message history. 
 We understand that moving the Slack channel is painful for all the users of the current channel, but feel that in this case, the benefits outweigh the pain. 
-Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [cncf-strimzi-user@lists.cncf.io](mailto://cncf-strimzi-user@lists.cncf.io).
+Secondly, we will be moving to a new mailing list, again hosted by CNCF. The new mailing list will be [cncf-strimzi-users@lists.cncf.io](mailto://cncf-strimzi-users@lists.cncf.io).
 
 However, on a technical level, most users will not notice any change from the move to the CNCF.
 The release cadence of the project will be unchanged, no breaking code or license changes are planned and the development team remains the same.
