Added images and links. Fixed capitalisation.
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-09-20-knative.md
+++ b/_posts/2019-09-20-knative.md
@@ -5,29 +5,29 @@ date: 2019-09-06
 author: sjwoodman
 ---
 
-Knative is a platform for running Serverless workloads on kubernetes clusters. 
-It provides middleware abstractions and APIs that ease the development and deployment lifecycle and allow developers to focus on application logic.
+[Knative](https://knative.dev/) is a platform for running Serverless workloads on Kubernetes clusters. 
+It provides middleware abstractions and APIs that ease the development and deployment lifecycle in order to allow developers to focus on application logic.
 For example, Knative deals with the networking and exposing of applications, tracking of versions and scaling (including to zero).
-Further, there are declarative ways to respond to events and data streams including those based on Apache Kafka.
-Apache Kafka can be used in Knative applications in two ways: firstly, Kafka can be used as the underlying transport for internal Channels; and secondly, it can be used as the source of events.
-This blog post will focus on the latter and demonstrate how to develop a scalable application that responds to messages on a Kafka Topic.   
+Further, it offers declarative ways to bind applications to events and data streams including those based on Apache Kafka.
 
 <!--more-->
 
+Apache Kafka can be used in Knative applications in two ways: firstly, Kafka can be used as the underlying transport for internal Channels; and secondly, it can be used as the source of events.
+This blog post will focus on the latter and demonstrate how to develop a scalable application that responds to messages on a Kafka Topic.   
 The Knative project includes two components, Knative Serving and Knative Eventing.
 Knative Serving deals with the deployment, routing and scaling of the serverless containers.
 Knative Eventing is responsible for the messaging infrastructure to connect these containers to sources of events.
 
-#Installation
+# Installation
 
-Our application will run in minikube although Knative and Strimzi can both work in any Kubernetes cluster - there is no vendor lock in.
+Our application will run in Minikube although Knative and Strimzi can both work in any Kubernetes cluster - there is no vendor lock in.
 Initially we need a working Minikube cluster with the relevant components installed.
 The community documentation describes how to [install Knative on Minikube](https://knative.dev/docs/install/knative-with-minikube/).
 Notice that Knative requires a lot of resources - at least 10GB of memory and 6 CPUs are recommended.
 The installation of Knative is complicated and involves a number of steps. 
-For instance, first a ServiceMesh such as Istio, Ambassador or Gloo must be installed.
+For instance, first a ServiceMesh such as Istio, Ambassador or Gloo must be installed, then Knative Serving and finally Knative Eventing.
 
-Fortunately, one of the contributors to Knative Eventing has developed a much simpler install script for Minishift.
+Fortunately, one of the [contributors to Knative Eventing](http://github.com/matzew/) has developed a much simpler install script for Minishift.
 This script will install not just Knative but all the dependencies and even Strimzi itself.
 Knative version 0.8.0 will be used along with the latest release of Strimzi (currently 0.13.0).
 Checkout the [repository](https://github.com/matzew/lberk-misc/tree/eventing_080).
@@ -52,14 +52,13 @@ The Kafka EventSource is not part of the core installation so must be added sepa
 kubectl apply -f https://github.com/knative/eventing-contrib/releases/download/v0.8.0/kafka.yaml
 ```
 
-#Deploying an application
-
-//TODO: Add an image
-//TODO: Add links
+# Deploying an application
 
 Knative provides a number of different ways to consume events from Apache Kafka.
 The simplest, which will be shown here, is to connect a Kafka EventSource directly to a Knative Serving application.
-Others include decoupling the Source and Service using a channel (more applicable when the source is not a messaging platform itself) and routing via an internal Broker.
+Others include decoupling the Source and Service using a Channel (more applicable when the source is not a messaging platform itself) and routing via an internal Broker.
+
+![Knative Eventing Architecture]({{ "/assets/2019-09-20-knative-eventing-architecture.png" }})
 
 We will use a pre-built Knative Serving application that will log events to the console.
 The yaml for the service is shown below with the key points being the `name` and `namespace`.
@@ -91,7 +90,9 @@ The Serving application automatically exposes an HTTP endpoint to invoke the ser
 However, we want the service to respond to messages on a Kafka Topic.
 Therefore we create a `KafkaSource` Custom Resource which controls the Topic -> application mapping.
 The `KafkaSource` includes properties for the address of the Kafka Broker, the topic to consume from and the consumer group that the consumer should belong to.
-Finally, in the `spec.sink` section it references the Serving application that was created earlier.
+It is also possible to configure the source to use TLS encryption and SASL authentication if required by the Kafka broker - the Source is able to extract the relevant usernames, passwords and certificates from Kubernetes Secrets.
+Finally, in the `spec.sink` section the Source references the Serving application that was created earlier.
+
 
 ```yaml
 apiVersion: sources.eventing.knative.dev/v1alpha1
@@ -109,7 +110,7 @@ spec:
     name: logevents
 ```
 
-Save and deploy this yaml file too using `kubectl apply -f source.yaml` to create the source.
+Save and deploy this yaml file using `kubectl apply -f source.yaml` to create the source.
 With everything deployed and connected, all that is left is to produce some messages to the `my-topic` Topic.
 In this example, Strimzi is not exposed outside the cluster so the simplest way is to run the `console-producer` in a pod inside Minishift.
 
@@ -120,11 +121,10 @@ kubectl -n kafka run kafka-producer -ti --image=strimzi/kafka:0.13.0-kafka-2.3.0
 
 This message will be sent to `my-topic` and then consumed by the `logevents` Serving application.
 View the logs of the `log-events-XXX` pod in the `default` namespace.
-This will show the message formatted as a CloudEvent. 
+This will show the message formatted as a [CloudEvent](https://cloudevents.io/). 
 All messages in Knative Eventing are represented as CloudEvents and the payload of the CloudEvent contains the value of the Kafka message.
 The key of the message is included in the CloudEvent headers.
 Note that if you send a non-JSON payload it will be base-64 encoded in the body.
-
 
 ```bash
 $ kubectl logs -n default logevents-c5jlv-deployment-558b8c7564-5r6w4 -c user-container
